Attempt: 3
Score: 15984